--- a/Phishing URL Detection.ipynb
+++ b/Phishing URL Detection.ipynb
@@ -91,8 +91,8 @@
     }
    ],
    "source": [
-    "!pip install matplotlib\n",
-    "!pip install seaborn"
+    "# !pip install matplotlib\n",
+    "# !pip install seaborn"
    ]
   },
   {
