--- a/Phishing URL Detection.ipynb
+++ b/Phishing URL Detection.ipynb
@@ -2872,7 +2872,7 @@
     }
    ],
    "source": [
-    "!pip install catboost"
+    "# !pip install catboost"
    ]
   },
   {
@@ -13491,7 +13491,7 @@
     }
    ],
    "source": [
-    "!pip install xgboost"
+    "# !pip install xgboost"
    ]
   },
   {
